# CodeNoteApp

./: .gitignore  LICENSE  README.md  css_generator.py  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: publish.yml
public/highlight/: DIGESTS.md  highlight.min.js
src/: App.svelte  Main.svelte  StandaloneWindow.svelte  app-settings.ts  initial-size-fix.ts  initialsize-fix.ts  main.ts  store.js  store.ts  styles.scss  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  note_handling.rs  open_in_filesystem.rs  read_notes.rs  search.rs
src/lib/: Greet.svelte
src/lib/components/: CornerButtonGroup.svelte  CustomSplitterBar.svelte  Dropdown.svelte  FindAndReplace.svelte  FormatDropdown.svelte  IconButton.svelte  NoteList.svelte  SearchInNote.svelte  Searchbar.svelte  SettingsOverlay.svelte  Svg.svelte
src/lib/components/splitter/: DefaultSplitter.svelte  Splitter.svelte  constants.ts  types.ts
src/lib/service/: constants.ts  editor.ts  file-manager.ts  save-manager.ts  search.ts  utils.js  utils.ts
src/lib/service/custom-link-format/: custom-link.ts
src/lib/service/custom-theme/: custom-theme.ts
src/lib/service/my-flip/: my-flip.ts
src/lib/service/quill-find-and-replace/: SearchBlot.js  Searcher.js
src/lib/service/search-highlight/: SearchBlot.js  Searcher.js
src/lib/service/syntax-highlight/: code-syntax.js  syntax.ts
src/lib/util/: app-settings.ts  initial-size-fix.ts  window.ts
src/styles/: lato-font.scss  quill-1.3.6.snow-modified.css  quill-2.0.0.core.css  quill-2.0.0.snow-modified.css  quill-2.0.0.snow.css  quill-final.scss
