[package]
name = "codenoteapp"
version = "0.0.5"
description = "CodeNoteApp"
authors = ["Leo Vinogradov"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.15", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.22", features = [] }
tauri-plugin-fs = "2.0.0-beta.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10.4"
tauri-plugin-os = "2.0.0-beta.6"
tauri-plugin-shell = "2.0.0-beta.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
