[package]
name = "code-note-app"
version = "1.0.0"
description = "CodeNoteApp"
authors = ["Leo Vinogradov"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Uncomment this and add a src/lib.rs file if building a Rust library
# [lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
# name = "tauri_app_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin = "2.2.0"
tauri-plugin-fs = "2.3.0"
tauri-plugin-os = "2.2.1"
tauri-plugin-shell = "2.2.1"
regex = "1.10.4"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"

